--- a/pipes-http.cabal
+++ b/pipes-http.cabal
@@ -18,9 +18,10 @@ Source-Repository head
 Library
     HS-Source-Dirs: src
     Build-Depends:
-        base         >= 4       && < 5   ,
-        bytestring   >= 0.9.2.1 && < 0.11,
-        pipes        >= 4.0     && < 4.2 ,
-        http-client  >= 0.2.1.1 && < 0.3
+        base             >= 4       && < 5   ,
+        bytestring       >= 0.9.2.1 && < 0.11,
+        pipes            >= 4.0     && < 4.2 ,
+        http-client      >= 0.2     && < 0.3 ,
+        http-client-tls                < 0.3
     Exposed-Modules: Pipes.HTTP
     GHC-Options: -O2 -Wall
