--- a/pipes-http.cabal
+++ b/pipes-http.cabal
@@ -2,6 +2,7 @@ Name: pipes-http
 Version: 1.0.3
 Cabal-Version: >=1.8.0.2
 Build-Type: Simple
+Tested-With: GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
 License: BSD3
 License-File: LICENSE
 Copyright: 2014 Gabriel Gonzalez
