--- a/pipes-http.cabal
+++ b/pipes-http.cabal
@@ -5,16 +5,16 @@ Build-Type: Simple
 Tested-With: GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
 License: BSD3
 License-File: LICENSE
-Copyright: 2016 Gabriel Gonzalez
-Author: Gabriel Gonzalez
-Maintainer: Gabriel439@gmail.com
-Bug-Reports: https://github.com/Gabriel439/Haskell-Pipes-HTTP-Library/issues
+Copyright: 2016 Gabriella Gonzalez
+Author: Gabriella Gonzalez
+Maintainer: GenuineGabriella@gmail.com
+Bug-Reports: https://github.com/Gabriella439/Haskell-Pipes-HTTP-Library/issues
 Synopsis: HTTP client with pipes interface
 Description: @pipes-http@ is a @pipes@ wrapper around the @http-client@ library
 Category: Pipes, Web
 Source-Repository head
     Type: git
-    Location: https://github.com/Gabriel439/Haskell-Pipes-HTTP-Library
+    Location: https://github.com/Gabriella439/Haskell-Pipes-HTTP-Library
 
 Library
     HS-Source-Dirs: src
